<resources>
    <string name="app_name">AudioPlayer</string>
    <string name="title_player">Player</string>
    <string name="title_playlist">Playlist</string>
    <string name="title_media_filter">Filter</string>
    <string name="title_media_list">Media</string>
    <string name="ok">OK</string>
    <string name="text_media_artist">Media Artist</string>
    <string name="text_media_album">Media Album</string>
    <string name="text_media_playing">Media Playing</string>
    <string name="text_time_remaining">Time Remaining</string>
    <string name="text_active_playlist">Active Playlist</string>
    <string name="no_bluetooth_adapter">No Bluetooth Adapter</string>
    <string name="exception">Exception</string>
    <string name="clear">Clear</string>
    <string name="misc">Misc</string>
    <string name="current_filter">Current Filter</string>
    <string name="exit">Exit</string>
    <string name="mode">Mode</string>
    <string name="save">Save</string>
    <string name="playlist_name">Playlist Name</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="set">Set</string>
    <string name="list">List</string>
    <string name="close">Close</string>
    <string name="move_up">Up</string>
    <string name="move_down">Down</string>
</resources>