<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_player">

    <fragment
        android:id="@+id/navigation_player"
        android:name="com.example.audioplayer.PlayerFragment"
        android:label="@string/title_player"
        tools:layout="@layout/player_fragment" />

    <fragment
        android:id="@+id/navigation_playlist"
        android:name="com.example.audioplayer.PlaylistFragment"
        android:label="@string/title_playlist"
        tools:layout="@layout/playlist_fragment" />

    <fragment
        android:id="@+id/navigation_media_filter"
        android:name="com.example.audioplayer.MediaFilterFragment"
        android:label="@string/title_media_filter"
        tools:layout="@layout/media_filter_fragment" />

    <fragment
        android:id="@+id/navigation_media_list"
        android:name="com.example.audioplayer.MediaListFragment"
        android:label="@string/title_media_list"
        tools:layout="@layout/media_list_fragment" />
</navigation>