<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/list_artist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/cantarell_bold"
        android:hint="@string/text_media_artist"
        android:text="@string/text_media_artist"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/list_album"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/list_artist"
        android:fontFamily="@font/cantarell_bold"
        android:hint="@string/text_media_album"
        android:text="@string/text_media_album"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/list_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/list_album"
        android:fontFamily="@font/cantarell_bold"
        android:hint="@string/text_media_playing"
        android:text="@string/text_media_playing"
        android:textSize="20sp" />
</RelativeLayout>