<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PlaylistFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/playlist_name_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/playlist_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/cantarell_bold"
            android:textSize="20sp"
            android:imeOptions="actionGo"
            android:inputType="text"
            android:hint="@string/playlist_name" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/button_row"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20sp"
        android:layout_centerHorizontal="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/playlist_name_layout">

        <Button
            android:id="@+id/button_save_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/cantarell_bold"
            android:text="@string/save"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/button_delete_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8sp"
            android:fontFamily="@font/cantarell_bold"
            android:text="@string/delete"
            app:layout_constraintStart_toEndOf="@id/button_save_list"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/button_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8sp"
            android:fontFamily="@font/cantarell_bold"
            android:text="@string/list"
            app:layout_constraintStart_toEndOf="@id/button_delete_list"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/button_exit_playlist_mode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8sp"
            android:fontFamily="@font/cantarell_bold"
            android:text="@string/exit"
            app:layout_constraintStart_toEndOf="@id/button_list"
            style="?android:attr/buttonBarButtonStyle" />

    </LinearLayout>

    <ListView
        android:id="@+id/playlist_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="110dp"
        android:layout_marginBottom="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_row" />

</androidx.constraintlayout.widget.ConstraintLayout>